--- a/package.json
+++ b/package.json
@@ -24,14 +24,14 @@
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^5.9.23",
     "multer": "^1.4.2",
+    "mysql2": "^1.7.0",
     "nodemailer": "^6.4.10",
     "nodemailer-express-handlebars": "^4.0.0",
     "pg": "^8.2.1",
     "pg-hstore": "^2.3.3",
     "sequelize": "^6.3.0",
     "youch": "^2.0.10",
-    "yup": "^0.29.1",
-    "mysql2": "^1.7.0"
+    "yup": "^0.29.1"
   },
   "devDependencies": {
     "nodemon": "^2.0.4",
